@@ -9,7 +9,7 @@ Warden.test_mode!
 feature 'User delete', js: true do
 
   # Scenario: User can delete own account
-  #   Given I am logged in
+  #   Given I am signed in
   #   When I delete my account
   #   Then I should see an account deleted message
   scenario 'user can delete own account', :slow do
