@@ -9,7 +9,7 @@ Warden.test_mode!
 feature 'User edit' do
 
   # Scenario: User changes email address
-  #   Given I am logged in
+  #   Given I am signed in
   #   When I change my email address
   #   Then I see an account updated message
   scenario 'user changes email address' do
@@ -23,7 +23,7 @@ feature 'User edit' do
   end
 
   # Scenario: User cannot edit another user's profile
-  #   Given I am logged in
+  #   Given I am signed in
   #   When I try to edit another user's profile
   #   Then I see my own 'edit profile' page
   scenario "user cannot cannot edit another user's profile", :me do
