@@ -9,7 +9,7 @@ Warden.test_mode!
 feature 'User profile page' do
 
   # Scenario: User sees own profile
-  #   Given I am logged in
+  #   Given I am signed in
   #   When I visit the user profile page
   #   Then I see my own email address
   scenario 'user sees own profile' do
@@ -21,7 +21,7 @@ feature 'User profile page' do
   end
 
   # Scenario: User cannot see another user's profile
-  #   Given I am logged in
+  #   Given I am signed in
   #   When I visit another user's profile
   #   Then I see an 'access denied' message
   scenario "user cannot see another user's profile" do
