@@ -7,7 +7,7 @@ require 'spec_helper'
 feature 'Sign Up' do
 
   # Scenario: Visitor can sign up with valid email address and password
-  #   Given I am not logged in
+  #   Given I am not signed in
   #   When I sign up with a valid email address and password
   #   Then I see a successful sign up message
   scenario 'visitor can sign up with valid email address and password' do
@@ -16,7 +16,7 @@ feature 'Sign Up' do
   end
 
   # Scenario: Visitor cannot sign up with invalid email address
-  #   Given I am not logged in
+  #   Given I am not signed in
   #   When I sign up with an invalid email address
   #   Then I see an invalid email message
   scenario 'visitor cannot sign up with invalid email address' do
@@ -25,7 +25,7 @@ feature 'Sign Up' do
   end
 
   # Scenario: Visitor cannot sign up without password
-  #   Given I am not logged in
+  #   Given I am not signed in
   #   When I sign up without a password
   #   Then I see a missing password message
   scenario 'visitor cannot sign up without password' do
@@ -34,7 +34,7 @@ feature 'Sign Up' do
   end
 
   # Scenario: Visitor cannot sign up with a short password
-  #   Given I am not logged in
+  #   Given I am not signed in
   #   When I sign up with a short password
   #   Then I see a 'too short password' message
   scenario 'visitor cannot sign up with a short password' do
@@ -43,7 +43,7 @@ feature 'Sign Up' do
   end
 
   # Scenario: Visitor cannot sign up without password confirmation
-  #   Given I am not logged in
+  #   Given I am not signed in
   #   When I sign up without a password confirmation
   #   Then I see a missing password confirmation message
   scenario 'visitor cannot sign up without password confirmation' do
@@ -52,7 +52,7 @@ feature 'Sign Up' do
   end
 
   # Scenario: Visitor cannot sign up with mismatched password and confirmation
-  #   Given I am not logged in
+  #   Given I am not signed in
   #   When I sign up with a mismatched password confirmation
   #   Then I should see a mismatched password message
   scenario 'visitor cannot sign up with mismatched password and confirmation' do
