@@ -8,11 +8,11 @@ module Features
       click_button 'Sign up'
     end
 
-    def login(email, password)
+    def signin(email, password)
       visit new_user_session_path
       fill_in 'Email', with: email
       fill_in 'Password', with: password
-      click_button 'Log in'
+      click_button 'Sign in'
     end
   end
 end
